# efalive

./: .gitignore  Pipfile  README.md  build_deb.sh  efalive-daemon  efalive-setup  efalivedaemon.py  efalivesetup.py  gettext.txt  install.sh  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: debian_package.yml
bash/download_map/: download_map.sh
debian/: README.Debian  README.source  changelog  conffiles  control  copyright  efalive-backup.sgml  efalive-daemon.sgml  efalive-restore.sgml  efalive-setup.sgml  efalive.cron.d.ex  efalive.default.ex  efalive.doc-base.EX  efalive.manpages  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm  postrm.ex  preinst  preinst.ex  prerm  prerm.ex  rules  watch.ex
efalive/common/: common.py  i18n.py  mailer.py  observable.py  settings.py  tasks.py  test_mailer.py  test_settings.py  test_usbmonitor.py  usbmonitor.py
efalive/daemon/: efalivedaemon.py  tasks.py  test_efalivedaemon.py  test_tasks.py
efalive/setup/: actionstab.py  backuptab.py  efasettingstab.py  mailtab.py  maingui.py  systemtab.py  taskstab.py  toolstab.py
efalive/setuptool/: actionstab.py  backuptab.py  efasettingstab.py  mailtab.py  maingui.py  systemtab.py  taskstab.py  toolstab.py
i18n/de/: efalive_autobackup.po
i18n/po_files/: de.po  efalive_autobackup.po
php/rezepte/: admin.php  category.php  dbinterface_pgsql.inc.php  rezepte.php  rezepte_org.php
python/efaLiveSetup/: gettext.txt  maingui.py  setup.py
python/pypdu/: pypdu.py  (+1 more)
(+719 files in other folders)
