[tool.poetry]
name = "efalive"
version = "2.8.4"
description = ""
authors = ["Kay Hannay <klinux@hannay.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.42.2"
python-pam = "^2.0.2"
pyudev = "^0.24.0"
python-dateutil = "^2.8.2"
lockfile = "^0.12.2"

[tool.poetry.dev-dependencies]
mock = "^5.0.1"
nose = "^1.3.7"
coverage = "^7.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
