[tool.poetry]
name = "efalive"
version = "2.9.0"
description = ""
authors = ["Kay Hannay <klinux@hannay.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.44.1"
python-pam = "^2.0.2"
pyudev = "^0.24.1"
python-dateutil = "^2.8.2"
lockfile = "^0.12.2"

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
nose = "^1.3.7"
coverage = "^7.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
