[tool.poetry]
name = "efalive"
version = "2.10.4"
description = ""
authors = ["Kay Hannay <klinux@hannay.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.50.0"
python-pam = "^2.0.2"
pyudev = "^0.24.3"
python-dateutil = "^2.9.0.post0"
lockfile = "^0.12.2"

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
nose = "^1.3.7"
coverage = "^7.6.12"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
